# gity

./: .pre-commit-config.yaml  Cargo.toml  README.md  build-release.sh  build.rs  hk.pkl  meson-install.sh  meson-run.sh  meson.build
build-aux/: com.markdeepwell.GitY.json
data/: com.markdeepwell.GitY.desktop  com.markdeepwell.GitY.gschema.xml  com.markdeepwell.GitY.metainfo.xml  com.markdeepwell.gity.desktop  com.markdeepwell.gity.gschema.xml
src/: git.rs  logger.rs  main.rs  search.rs  test_support.rs  version.rs  window.rs
src/resources/: resources.gresource.xml  shortcuts.ui  style.css
src/ui/: copy_on_hover.rs  mod.rs  styles.rs
src/ui/branch_panel/: mod.rs
src/ui/commit_list/: mod.rs
src/ui/grid_cell/: grid_cell.ui  imp.rs  mod.rs
src/ui/repo_view/: mod.rs
src/ui/welcome_view/: mod.rs
src/ui/window/: actions.rs  diff.rs  mod.rs  recent_repos.rs  repo.rs  search.rs  state.rs
src/window/: actions.rs  diff.rs  recent_repos.rs  repo.rs  search.rs  state.rs  ui.rs
