[package]
name = "gity"
version = "0.3.0"
edition = "2024"
authors = [
  "Mark Deepwell <mark@markdeepwell.com>",
]
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_12"] }
git2 = "0.20.3"
chrono = "0.4.42"
adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
glib-build-tools = "0.21.0"
sourceview5 = "0.10.0"
dirs = "6.0"

[build-dependencies]
glib-build-tools = "0.21.0"
