[package]
name = "gity"
version = "0.5.2"
edition = "2024"
authors = [
  "Mark Deepwell <mark@markdeepwell.com>",
]
license = "GPL-3.0-or-later"

[dependencies]
gtk = { version = "0.11", package = "gtk4", features = ["v4_12"] }
git2 = "0.20.4"
chrono = "0.4.44"
adw = { version = "0.9", package = "libadwaita", features = ["v1_5"] }
sourceview5 = "0.11.0"
dirs = "6.0"
ashpd = { version = "0.13", features = ["file_chooser", "glib", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
glib-build-tools = "0.22.0"
